test_data/Xml/Unexpected/Unserializable/InvalidClassName/multiLanguageProperty/wrong.xml.exception
Expected an element representing an instance of class MultiLanguageProperty with element name multiLanguageProperty, but got: utterlyInvalid at: the beginning